--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -3,16 +3,19 @@
 
 //variables
 $app-purple: #4A3AFF;
+$app-white: #fff;
+$app-dark: #1E252B;
+$app-grey: #747579;
 
-//Common reset
+//Common normalizer
 * {
   padding: 0;
   margin: 0;
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
 }
 
 html {
-  // width: 100%;
-  // height: 100%;
   background-image: url('/assets/texture.png');
   background-size: cover;
 }
@@ -22,5 +25,110 @@ html {
     background-color: $app-purple;
     padding: 4.563em 0;
     text-align: center;
+    color: $app-white;
+      &__title {
+      font-weight: 700;
+      font-size: 50px;
+      line-height: 50px;
+    }
   }
+
+  &-content {
+    padding: 30px;
+    margin: 97px auto;
+    max-width: 640px;
+    border-radius: 10px;
+    background-color: $app-white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+    &__title {
+      text-align: center;
+    }
+    &__search {
+      width: 100%
+    }
+    
+    &__notes {
+      &-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 6px 0;
+
+        &__name {
+          width: 100%;
+          max-width: 352px;
+          word-break: break-all;
+          font-size: 16px;
+          font-weight: 500;
+          color:#1E252B;
+          line-height: 26px;
+        }
+
+        &__button {
+          &-remove {
+            width: 32px;
+            height: 32px;
+            background: url('/assets/ic_delete.svg');
+            background-size: 20px;
+            background-repeat: no-repeat;
+            cursor: pointer;
+            border: none;
+            stroke: #4A3AFF;
+            fill: #4A3AFF;
+            border-radius: 50%;
+            background-color: $app-white;
+            background-position: center center;
+            box-shadow: rgba(100, 100, 111, 0.4) 0px 4px 10px 0px;
+            svg {
+              width: 1em;
+              height: 1em;
+            }
+          }
+        }
+      }
+    }
+
+    &__button {
+      &-create {
+        width: 100%;
+        font-size: 14px;
+        line-height: 26px;
+        font-weight: 600;
+        color: $app-white;
+        border-radius: 30px;
+        border: none;
+        background-color: #4A3AFF;
+        padding: 8px;
+        cursor: pointer;
+      }
+
+      &-remove {
+        width: 32px;
+        height: 32px;
+        background: url('/assets/ic_delete.svg');
+        background-size: 20px;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        border: none;
+        stroke: #4A3AFF;
+        fill: #4A3AFF;
+        border-radius: 50%;
+        background-color: $app-white;
+        background-position: center center;
+        box-shadow: rgba(100, 100, 111, 0.4) 0px 4px 10px 0px;
+        svg {
+          width: 1em;
+          height: 1em;
+        }
+      }
+    }
+
+    &__wrapper {
+      width: 100%;
+      margin: 0 auto;
+      max-width: 400px;
+    }
+  }
+
 }
