Styles was updated
Styles was updated

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -12,6 +12,7 @@ html {
 }
 
 .app-header {
+  position: relative;
   background-color: #4A3AFF;
   padding: 4.563em 0;
   text-align: center;
@@ -22,6 +23,40 @@ html {
   font-size: 50px;
   line-height: 50px;
 }
+.app-header__select {
+  background: url("/assets/arrow-down.png") no-repeat;
+  background-position: calc(100% - 14px);
+  padding: 13px 16px;
+  margin-top: 28px;
+  max-width: 402px;
+  width: 100%;
+  font-size: 14px;
+  line-height: 24px;
+  border-radius: 12px;
+  appearance: none;
+  border: 1px solid #fff;
+  color: #747579;
+  color: #fff;
+  background-color: none;
+}
+.app-header__button {
+  position: absolute;
+  top: 37%;
+  left: 10%;
+  outline: none;
+  border: none;
+  background: none;
+  outline: none;
+  border: none;
+}
+.app-header__link {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  color: #C2FF13;
+  cursor: pointer;
+}
 .app-content {
   padding: 30px;
   margin: 97px auto;
@@ -30,15 +65,82 @@ html {
   background-color: #fff;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+.app-content__note {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.app-content__note-label {
+  color: #747579;
+  margin-bottom: 4px;
+}
+.app-content__note-name, .app-content__note-body {
+  padding: 10px 16px;
+  max-width: 368px;
+  width: 100%;
+  font-size: 14px;
+  line-height: 24px;
+  color: #747579;
+  border: 1px solid #747579;
+  border-radius: 12px;
+  outline: none;
+  margin-bottom: 26px;
+}
+.app-content__note-body {
+  min-height: 100px;
+  resize: none;
+}
+.app-content__note-body::-webkit-scrollbar {
+  width: 3px;
+}
+.app-content__note-body::-webkit-scrollbar-thumb {
+  background: #4A3AFF;
+  border-radius: 0.625em;
+}
+.app-content__note-body::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
+}
 .app-content__title {
   text-align: center;
 }
 .app-content__search {
+  padding: 10px 16px;
+  max-width: 368px;
   width: 100%;
+  font-size: 14px;
+  line-height: 24px;
+  color: #747579;
+  border: 1px solid #747579;
+  border-radius: 12px;
+  outline: none;
+}
+.app-content__search-label {
+  display: inline-block;
+  margin: 28px 0 0;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  line-height: 24px;
+  color: #747579;
+}
+.app-content__notes {
+  margin: 28px 0;
+  max-height: 326px;
+  overflow-x: scroll;
+}
+.app-content__notes::-webkit-scrollbar {
+  width: 3px;
+}
+.app-content__notes::-webkit-scrollbar-thumb {
+  background: #4A3AFF;
+  border-radius: 0.625em;
+}
+.app-content__notes::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
 }
 .app-content__notes-item {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin: 6px 0;
 }
@@ -55,7 +157,7 @@ html {
   width: 32px;
   height: 32px;
   background: url("/assets/ic_delete.svg");
-  background-size: 20px;
+  background-size: 16px;
   background-repeat: no-repeat;
   cursor: pointer;
   border: none;
@@ -64,11 +166,20 @@ html {
   border-radius: 50%;
   background-color: #fff;
   background-position: center center;
-  box-shadow: rgba(100, 100, 111, 0.4) 0px 4px 10px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 2px 6px 0px;
 }
 .app-content__notes-item__button-remove svg {
   width: 1em;
   height: 1em;
+}
+.app-content__status {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.app-content__status-text {
+  color: #1E252B;
+  opacity: 0.5;
 }
 .app-content__button-create {
   width: 100%;
@@ -104,7 +215,12 @@ html {
 .app-content__wrapper {
   width: 100%;
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 402px;
+  box-sizing: border-box;
+}
+.app-content__wrapper--edit {
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=styles.css.map */
