--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -38,7 +38,7 @@ html {
     &__select {
       background: url('/assets/arrow-down.png') no-repeat;
       background-position: calc(100% - 14px);
-      padding: 13px 16px;
+      padding: 10px 16px;
       margin-top: 28px;
       max-width: 402px; 
       width: 100%;
@@ -261,10 +261,14 @@ html {
       margin: 0 auto;
       max-width: 402px;
       box-sizing: border-box;
-
+      
       &--edit {
         display: flex;
         flex-direction: column;
+
+        .app-content__title {
+          margin-bottom: 28px;
+        }
       }
     }
   }
