--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 html {
-  background-image: url("/assets/texture.png");
+  background-image: url("/notes-app/assets/texture.png");
   background-size: cover;
 }
 
@@ -24,7 +24,7 @@ html {
   line-height: 50px;
 }
 .app-header__select {
-  background: url("/assets/arrow-down.png") no-repeat;
+  background: url("/notes-app/assets/arrow-down.png") no-repeat;
   background-position: calc(100% - 14px);
   padding: 10px 16px;
   margin-top: 28px;
@@ -156,7 +156,7 @@ html {
 .app-content__notes-item__button-remove {
   width: 32px;
   height: 32px;
-  background: url("/assets/ic_delete.svg");
+  background: url("/notes-app/assets/ic_delete.svg");
   background-size: 16px;
   background-repeat: no-repeat;
   cursor: pointer;
@@ -196,7 +196,7 @@ html {
 .app-content__button-remove {
   width: 32px;
   height: 32px;
-  background: url("/assets/ic_delete.svg");
+  background: url("/notes-app/assets/ic_delete.svg");
   background-size: 20px;
   background-repeat: no-repeat;
   cursor: pointer;
