--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -20,21 +20,29 @@ html {
 }
 .app-header__title {
   font-weight: 700;
-  font-size: 50px;
-  line-height: 50px;
+  font-size: 3.125rem;
+  line-height: 3.125rem;
+}
+.app-header__text {
+  display: inline-block;
+  margin-top: 1.75rem;
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 2.875rem;
+  color: #C2FF13;
 }
 .app-header__select {
   background: url("/notes-app/assets/arrow-down.png") no-repeat;
   background-position: calc(100% - 14px);
-  padding: 10px 16px;
-  margin-top: 28px;
-  max-width: 402px;
+  padding: 0.625rem 1rem;
+  margin-top: 1.75rem;
+  max-width: 25.125rem;
   width: 100%;
-  font-size: 14px;
-  line-height: 24px;
-  border-radius: 12px;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  border-radius: 0.75rem;
   appearance: none;
-  border: 1px solid #fff;
+  border: 0.063rem solid #fff;
   color: #747579;
   color: #fff;
   background-color: none;
@@ -52,18 +60,18 @@ html {
 .app-header__link {
   display: flex;
   align-items: center;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 700;
   color: #C2FF13;
   cursor: pointer;
 }
 .app-content {
-  padding: 30px;
-  margin: 97px auto;
-  max-width: 640px;
-  border-radius: 10px;
+  padding: 1.875rem;
+  margin: 6.063rem auto;
+  max-width: 40rem;
+  border-radius: 0.625rem;
   background-color: #fff;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0 0.438rem 1.813rem 0;
 }
 .app-content__note {
   display: flex;
@@ -72,26 +80,26 @@ html {
 }
 .app-content__note-label {
   color: #747579;
-  margin-bottom: 4px;
+  margin-bottom: 0.25rem;
 }
 .app-content__note-name, .app-content__note-body {
-  padding: 10px 16px;
-  max-width: 368px;
+  padding: 0.625rem 1rem;
+  max-width: 23rem;
   width: 100%;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
   color: #747579;
-  border: 1px solid #747579;
-  border-radius: 12px;
+  border: 0.063rem solid #747579;
+  border-radius: 0.75rem;
   outline: none;
-  margin-bottom: 26px;
+  margin-bottom: 1.625rem;
 }
 .app-content__note-body {
-  min-height: 100px;
+  min-height: 6.25rem;
   resize: none;
 }
 .app-content__note-body::-webkit-scrollbar {
-  width: 3px;
+  width: 0.188rem;
 }
 .app-content__note-body::-webkit-scrollbar-thumb {
   background: #4A3AFF;
@@ -104,32 +112,32 @@ html {
   text-align: center;
 }
 .app-content__search {
-  padding: 10px 16px;
-  max-width: 368px;
+  padding: 0.625rem 1rem;
+  max-width: 23rem;
   width: 100%;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 24px;
   color: #747579;
-  border: 1px solid #747579;
-  border-radius: 12px;
+  border: 0.063rem solid #747579;
+  border-radius: 0.75rem;
   outline: none;
 }
 .app-content__search-label {
   display: inline-block;
-  margin: 28px 0 0;
+  margin: 1.75rem 0 0;
   width: 100%;
   text-align: center;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
   color: #747579;
 }
 .app-content__notes {
-  margin: 28px 0;
-  max-height: 326px;
+  margin: 1.75rem 0;
+  max-height: 20.375rem;
   overflow-x: scroll;
 }
 .app-content__notes::-webkit-scrollbar {
-  width: 3px;
+  width: 0.188rem;
 }
 .app-content__notes::-webkit-scrollbar-thumb {
   background: #4A3AFF;
@@ -142,22 +150,22 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 6px 0;
+  margin: 0.375rem 0;
 }
 .app-content__notes-item__name {
   width: 100%;
-  max-width: 352px;
+  max-width: 22rem;
   word-break: break-all;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
   color: #1E252B;
-  line-height: 26px;
+  line-height: 1.625rem;
 }
 .app-content__notes-item__button-remove {
-  width: 32px;
-  height: 32px;
+  width: 2rem;
+  height: 2rem;
   background: url("/notes-app/assets/ic_delete.svg");
-  background-size: 16px;
+  background-size: 1rem;
   background-repeat: no-repeat;
   cursor: pointer;
   border: none;
@@ -166,11 +174,11 @@ html {
   border-radius: 50%;
   background-color: #fff;
   background-position: center center;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 2px 6px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0 0.125rem 0.375rem 0;
 }
 .app-content__notes-item__button-remove svg {
-  width: 1em;
-  height: 1em;
+  width: 1rem;
+  height: 1rem;
 }
 .app-content__status {
   display: flex;
@@ -183,21 +191,21 @@ html {
 }
 .app-content__button-create {
   width: 100%;
-  font-size: 14px;
-  line-height: 26px;
+  font-size: 0.875rem;
+  line-height: 1.625rem;
   font-weight: 600;
   color: #fff;
-  border-radius: 30px;
+  border-radius: 1.875rem;
   border: none;
   background-color: #4A3AFF;
   padding: 8px;
   cursor: pointer;
 }
 .app-content__button-remove {
-  width: 32px;
-  height: 32px;
+  width: 2rem;
+  height: 2rem;
   background: url("/notes-app/assets/ic_delete.svg");
-  background-size: 20px;
+  background-size: 1.25rem;
   background-repeat: no-repeat;
   cursor: pointer;
   border: none;
@@ -206,7 +214,7 @@ html {
   border-radius: 50%;
   background-color: #fff;
   background-position: center center;
-  box-shadow: rgba(100, 100, 111, 0.4) 0px 4px 10px 0px;
+  box-shadow: rgba(100, 100, 111, 0.4) 0 0.25rem 0.625rem 0;
 }
 .app-content__button-remove svg {
   width: 1em;
@@ -215,7 +223,7 @@ html {
 .app-content__wrapper {
   width: 100%;
   margin: 0 auto;
-  max-width: 402px;
+  max-width: 25.125rem;
   box-sizing: border-box;
 }
 .app-content__wrapper--edit {
@@ -223,7 +231,7 @@ html {
   flex-direction: column;
 }
 .app-content__wrapper--edit .app-content__title {
-  margin-bottom: 28px;
+  margin-bottom: 1.75rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
